# cmake

./: .gitmodules  README.md
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  conanfile.py  vcpkg.json
src/app/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cc
src/cmake/: AddGitSubmodule.cmake  LTO.cmake  sanitizer.cmake  warnings.cmake
src/config/: CMakeLists.txt  Makefile  cmake_install.cmake  config.hpp.in
src/configured_file/: config.hpp
src/lib/: Makefile  cmake_install.cmake
src/lib/my_lib/: CMakeLists.txt  Makefile  cmake_install.cmake  my_lib.cc  my_lib.h
src/tests/: CMakeLists.txt  main.cc
